--- a/template/markdown.ejs
+++ b/template/markdown.ejs
@@ -30,12 +30,6 @@
             </article>
         </slide>
         <%}%>
-
-        <!-- <slide class="slide logoslide dark nobackground">
-            <article class="flexbox vcenter">
-                <h2 style="color: white;">Powered By nodeppt v<%= nodeppt_version %></h2>
-            </article>
-        </slide> -->
         <div class="slideTip" id="tip"></div>
     </slides>
 </div>
@@ -126,5 +120,9 @@ MixJS.loadJS('highlight/highlight.pack.js',function(){
 <script type="text/javascript" src="/js/mathjax/MathJax.js"></script>
 <% } %>
 <!--placeholder-->
+<script type="text/javascript" src="/js/pixi/pixi.js"></script>
+<script type="text/javascript" src="/js/pixi/TweenMax.min.js"></script>
+<script type="text/javascript" src="/js/pixi/ColorPropsPlugin.min.js"></script>
+<script type="text/javascript" src="/js/pixi/index.js"></script>
 </body>
 </html>
